Fixed that the Toast dont overflow on a small screen.

--- a/students-frontend/src/assets/frontend.css
+++ b/students-frontend/src/assets/frontend.css
@@ -237,3 +237,7 @@ body {
   font-size: 1rem;
   cursor: pointer;
 }
+
+.p-toast {
+  max-width: calc(100vw - 40px);
+}
